# icp_appointment_app

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/appointment_backend/: Cargo.toml  appointment_backend.did
src/appointment_backend/src/: lib.rs
src/appointment_frontend/: package.json
src/appointment_frontend/src/: App.jsx  emailvalidation.jsx  index.scss  main.jsx  validations.jsx
