[package]
name = "appointment_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-timers = "0.6" # Feel free to remove this dependency if you don't need timers

ic-stable-structures = "0.5.4"
serde = "1.0.132"
ic-cdk-macros = "0.8.1"
getrandom = { version = "0.2", features = ["js"] }


[dependencies.uuid]
version = "0.6"
features = [
    "v4",  
]
